v1.2.1 (2017.08.xx)
  - Add "Disable Channel", "Add to Favorite Channels" and "Remove from Favorite Channels" Client Actions to channel context menus
  - Adapt to new backend discovery URLs (api.hdhomerun.com)

v1.2.0 (2017.07.23)
  - Update libhdhomerun library to version 2017.06.12
  - Remove custom addon callback implementations in favor of the standard ones provided in Kodi source code
  - Update MPEG-TS stream implementation to support Recorded TV as well as tuner-direct Live TV streams
  - Detect and remove MPEG-TS SCTE PIM (0xC0) table when inserted before the PMT (0x02) table in the same PSI packet
  - Add "DVR stream read operation timeout (milliseconds)" advanced option
  - Add "DVR stream read operation minimum size" advanced option
  - Add "DVR stream ring buffer size" advanced option

v1.1.1 (2017.07.07)
  - Allow for 30-second and 1-minute local network discovery intervals (devices, lineups, recordings)
  - Adapt to backend recording attribute change; use DisplayGroupTitle instead of Title for recording folder names
  - Detect special recording DisplayGroupTitle attributes 'movie' and 'sport' and convert to 'Movies'/'Sports' folders

v1.1.0 (2017.07.01)
  - Update SQLite database engine to version 3.19.3
  - Update cURL library to version 7.54.1
  - New Electronic Program Guide (EPG) implementation
  - Fix demuxer format hint for Live TV streams
  - Use GUI dialog boxes to indicate errors that occur when adding timers rather than throwing an exception
  - Add a selection dialog box when adding Record Series Rule timers to allow user to choose from matching titles
  - Apply the "Startup discovery task delay" to the discovery executed on wake from sleep
  - (Linux/Android) Prevent cURL from raising signals on name resolution failures or data transfer time-outs
  
v1.0.10 (2017.06.07)
  - Reduce number of Kodi callbacks generated during initial discovery tasks